Kubernetes/MRI-Brain-Tumor-Detection-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: mri-brain-tumor-detection-ui-deployment
  name: mri-brain-tumor-detection-ui-deployment
  namespace: mri-brain-tumor-detection
spec:
  replicas: 1
  selector:
    matchLabels:
      run: mri-brain-tumor-detection-ui-deployment
  template:
    metadata:
      labels:
        run: mri-brain-tumor-detection-ui-deployment
    spec:
      containers:
        - name: mri-brain-tumor-detection-ui
          image: ninepiece2/mri-brain-tumor-detection:ui
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mri-brain-tumor-detection-api-deployment
  namespace: mri-brain-tumor-detection
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mri-brain-tumor-detection-api-deployment
  template:
    metadata:
      labels:
        app: mri-brain-tumor-detection-api-deployment
    spec:
      containers:
        - name: mri-brain-tumor-detection-api
          image: ninepiece2/mri-brain-tumor-detection:api
          imagePullPolicy: Always
          ports:
            - containerPort: 443

---

apiVersion: v1
kind: Service
metadata:
  name: mri-brain-tumor-detection-service
  namespace: mri-brain-tumor-detection
spec:
  selector:
    run: mri-brain-tumor-detection-ui-deployment
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mri-brain-tumor-detection-ingress
  namespace: mri-brain-tumor-detection
spec:
  ingressClassName: haproxy
  rules:
    - host: mribraintumordetection.romitsagu.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mri-brain-tumor-detection-service
                port:
                  number: 80

---

apiVersion: v1
kind: Service
metadata:
  name: mri-brain-tumor-detection-internal-service
  namespace: mri-brain-tumor-detection
spec:
  selector:
    app: mri-brain-tumor-detection-api-deployment
  ports:
    - port: 443
      targetPort: 443
  type: ClusterIP
